--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
 			<div class="container">
 				<h1 class="logo">Relaxr</h1>
 				<h2>Get piece of mind with a single tap</h2>
-				<a id="button-yellow" href="javascript:window.prompt('Enter your Email')">Join Our Mailing List</a>
+				<!--<a id="button-yellow" onclick="cambiarNombre()" href="javascript:window.prompt('Enter your Email')">Join Our Mailing List</a>-->
+				<!--<a id="button-yellow" onclick="cambiarNombre()" >Join Our Mailing List</a>-->
+				<a id="button-yellow"  href="#" onclick="cambiarNombre()" >Join Our Mailing List</a>
+
+
 
 			</div>
 		</header>
